karl package Changelog
======================

Unreleased
----------

- Add a ``karl_project`` paster template (unfinished) in order to
  bootstrap a KARL customization.  The code used is an amalgam of
  Tres' ``non_osi_template`` package updated with recent changes to
  the OSI package.

- Forward compat: use the "repoze.bfg.view.static" helper rather than
  rolling our own view to serve static files in karl.views.site.

- LP #392561:  get 'content_modified' set correctly on communities when
  adding content.

- LP #391234:  Use a non-forked version of the repoze.who auth_tkt plugin
  (repoze.who 1.0.15, now in the "lemonade" index has the "max age" feature
  which made this fork necessary).

- LP #391246:  Removed concept of "vocabularies" as a persistently stored
  thing with indirection.  Placed countries data in core karl package as
  const data.

- LP #390868:  Updated OSI logo.

- LP #384841:  Add 'use_cache' kw argument to CachingCatalog to disable
  cache for particular searches.

- LP #391377: Moved settings such as 'system_email_domain' to karl.ini.

- Stop using a custom KarlSecurityPolicy; this policy was identical to
  the WhoInheritingACLSecurityPolicy in repoze.bfg 0.8+.  Use that one
  instead.

- LP #388096: Made a link to the community delete operation.

- LP #391247: Refactored console scripts to make them easier to test
  and maintain.  Renamed osi.ini to karl.ini.

- LP #391251: Moved osi/utilities to the karl package.

- Graceful handling if invalid 'To:' address in mailin.

- Mailin can now signal that it is wedged by writing a file, '.error', to
  its Maildir when it encounters an error.  This is easier to set up monitoring
  for than scraping the logs.  Humans will still need to read the logs when
  an error is found.

3.2 (2009-06-24)
----------------

- LP #387974:  Made 'edit_acl.html' view reindex context in the 'allowed'
  index, as well as invalidating any cached catalog queries.
